--- a/src/app/modules/salaries/components/historical-charts-page/historical-charts-page.component.html
+++ b/src/app/modules/salaries/components/historical-charts-page/historical-charts-page.component.html
@@ -32,7 +32,7 @@
         />
       </div>
 
-      <div *ngIf="data.salariesCountWeekByWeekChart.hasGradeItems" class="mb-5">
+      <div *ngIf="data.salariesCountWeekByWeekChart && data.salariesCountWeekByWeekChart.hasGradeItems" class="mb-5">
         <app-historical-salaries-by-grade-chart
           [data]="data.salariesCountWeekByWeekChart"
         />
