--- a/src/app/modules/salaries/components/historical-charts-page/historical-charts-page.component.html
+++ b/src/app/modules/salaries/components/historical-charts-page/historical-charts-page.component.html
@@ -1,8 +1,8 @@
 <app-page-header>Исторические данные</app-page-header>
 
-<div class="container mt-5 mb-5" *ngIf="data; else dataLoading">
-  <div class="card" *ngIf="!data.shouldAddOwnSalary; else noCurrentSalary">
-    <div class="card-body">
+<div class="container mt-5" *ngIf="data; else dataLoading">
+  <div *ngIf="!data.shouldAddOwnSalary; else noCurrentSalary">
+    <div class="card card-body">
       <div class="mb-5 h2">Тенденция изменения зарплат</div>
 
       <div class="mb-5">
@@ -43,6 +43,16 @@
           [data]="data.salariesCountWeekByWeekChart"
         />
       </div>
+    </div>
+  </div>
+</div>
+
+<div class="container mt-5" *ngIf="surveyData; else dataLoading">
+  <div class="card card-body">
+    <div class="mb-5 h2">Тенденция опроса о статистике</div>
+
+    <div class="mt-5">
+      <app-historical-survey-chart [data]="surveyData" />
     </div>
   </div>
 </div>
