--- a/src/app/modules/salaries/components/historical-charts-page/historical-survey-chart/historical-survey-chart.component.html
+++ b/src/app/modules/salaries/components/historical-charts-page/historical-survey-chart/historical-survey-chart.component.html
@@ -1,7 +1,13 @@
-<div>
+<div class="mb-5">
   <div class="h4 mb-3">Изменение опроса о статистики</div>
   <div class="chart-container">
     <canvas class="chart" id="historical-survey-chart">{{ surveyChart }}</canvas>
   </div>
 </div>
 
+<div class="mb-5">
+  <div class="h4 mb-3">Изменение опроса о статистики по грейдам</div>
+  <div class="chart-container">
+    <canvas class="chart" id="historical-survey-grade-chart">{{ surveyGradeChart }}</canvas>
+  </div>
+</div>
