--- a/src/app/modules/salaries/components/historical-charts-page/historical-survey-chart/historical-survey-chart.component.html
+++ b/src/app/modules/salaries/components/historical-charts-page/historical-survey-chart/historical-survey-chart.component.html
@@ -6,15 +6,29 @@
 </div>
 
 <div class="mb-5">
-  <div class="h4 mb-3">Польза статистики. Разделение по грейдам</div>
+  <div class="h4 mb-3">Польза статистики по мнению тех, кто работает на Казахстан</div>
   <div class="chart-container">
-    <canvas class="chart" id="historical-survey-grade-chart">{{ surveyGradeChart }}</canvas>
+    <canvas class="chart" id="historical-survey-grade-local-chart">{{ surveyGradeLocalChart }}</canvas>
   </div>
 </div>
 
 <div class="mb-5">
-  <div class="h4 mb-3">Ожидания по статистике. Разделение по грейдам</div>
+  <div class="h4 mb-3">Польза статистики по мнению тех, кто работает на удаленке</div>
   <div class="chart-container">
-    <canvas class="chart" id="historical-survey-expectation-grade-chart">{{ surveyExpectationGradeChart }}</canvas>
+    <canvas class="chart" id="historical-survey-grade-remote-chart">{{ surveyGradeRemoteChart }}</canvas>
+  </div>
+</div>
+
+<div class="mb-5">
+  <div class="h4 mb-3">Ожидания по статистике у тех, кто работает на Казахстан</div>
+  <div class="chart-container">
+    <canvas class="chart" id="historical-survey-expectation-grade-local-chart">{{ surveyExpectationGradeLocalChart }}</canvas>
+  </div>
+</div>
+
+<div class="mb-5">
+  <div class="h4 mb-3">Ожидания по статистике у тех, кто работает на удаленке</div>
+  <div class="chart-container">
+    <canvas class="chart" id="historical-survey-expectation-grade-remote-chart">{{ surveyExpectationGradeRemoteChart }}</canvas>
   </div>
 </div>
