--- a/src/app/modules/salaries/components/historical-charts-page/historical-salaries-by-grade-chart/historical-salaries-by-grade-chart.component.html
+++ b/src/app/modules/salaries/components/historical-charts-page/historical-salaries-by-grade-chart/historical-salaries-by-grade-chart.component.html
@@ -1,5 +1,5 @@
 <div class="mb-3">
-  <span class="h4">Зарплаты по грейдам</span>
+  <span class="h4">Тенденция изменений, разделение по грейдам</span>
 </div>
 
 <div class="mb-3">
