--- a/src/app/modules/salaries/components/historical-charts-page/historical-salaries-chart/historical-salaries-chart.component.html
+++ b/src/app/modules/salaries/components/historical-charts-page/historical-salaries-chart/historical-salaries-chart.component.html
@@ -1,5 +1,5 @@
 <div class="mb-3">
-  <span class="h4">Изменение медианной и средней зарплат по времени</span>
+  <span class="h4">Общие данные</span>
 </div>
 
 <div id="canvas-historical-chart-container">
