--- a/src/app/modules/salaries/components/historical-charts-page/historical-survey-chart/historical-survey-chart.component.html
+++ b/src/app/modules/salaries/components/historical-charts-page/historical-survey-chart/historical-survey-chart.component.html
@@ -1,7 +1,7 @@
 <div class="mb-5">
   <div class="h4 mb-3">Изменение опроса о статистики</div>
   <div class="chart-container">
-    <canvas class="chart" id="historical-survey-chart">{{ surveyChart }}</canvas>
+    <canvas class="chart" id="expectation-chart">{{ expectationChart }}</canvas>
   </div>
 </div>
 
@@ -38,13 +38,13 @@
 <div class="mb-5">
   <div class="h4 mb-3">Ожидания по статистике у тех, кто работает на Казахстан</div>
   <div class="chart-container">
-    <canvas class="chart" id="historical-survey-expectation-grade-local-chart">{{ surveyExpectationGradeLocalChart }}</canvas>
+    <canvas class="chart" id="expectation-grade-local-chart">{{ expectationGradeLocalChart }}</canvas>
   </div>
 </div>
 
 <div class="mb-5">
   <div class="h4 mb-3">Ожидания по статистике у тех, кто работает на удаленке</div>
   <div class="chart-container">
-    <canvas class="chart" id="historical-survey-expectation-grade-remote-chart">{{ surveyExpectationGradeRemoteChart }}</canvas>
+    <canvas class="chart" id="expectation-grade-remote-chart">{{ expectationGradeRemoteChart }}</canvas>
   </div>
 </div>
