--- a/src/app/modules/salaries/components/historical-charts-page/historical-survey-chart/historical-survey-chart.component.html
+++ b/src/app/modules/salaries/components/historical-charts-page/historical-survey-chart/historical-survey-chart.component.html
@@ -24,14 +24,14 @@
 <div class="mb-5">
   <div class="h4 mb-3">Польза статистики по мнению тех, кто работает на Казахстан</div>
   <div class="chart-container">
-    <canvas class="chart" id="historical-survey-grade-local-chart">{{ surveyGradeLocalChart }}</canvas>
+    <canvas class="chart" id="usefulness-grade-local-chart">{{ usefulnessGradeLocalChart }}</canvas>
   </div>
 </div>
 
 <div class="mb-5">
   <div class="h4 mb-3">Польза статистики по мнению тех, кто работает на удаленке</div>
   <div class="chart-container">
-    <canvas class="chart" id="historical-survey-grade-remote-chart">{{ surveyGradeRemoteChart }}</canvas>
+    <canvas class="chart" id="usefulness-grade-remote-chart">{{ usefulnessGradeRemoteChart }}</canvas>
   </div>
 </div>
 
