Added all charts

--- a/src/app/modules/salaries/components/historical-charts-page/historical-survey-chart/historical-survey-chart.component.html
+++ b/src/app/modules/salaries/components/historical-charts-page/historical-survey-chart/historical-survey-chart.component.html
@@ -1,5 +1,12 @@
 <div class="mb-5">
-  <div class="h4 mb-3">Изменение опроса о статистики</div>
+  <div class="h4 mb-3">Польза статистики, все ответы вместе</div>
+  <div class="chart-container">
+    <canvas class="chart" id="usefulness-chart">{{ usefulnessChart }}</canvas>
+  </div>
+</div>
+
+<div class="mb-5">
+  <div class="h4 mb-3">Ожидания от статистики, все ответы вместе</div>
   <div class="chart-container">
     <canvas class="chart" id="expectation-chart">{{ expectationChart }}</canvas>
   </div>
