--- a/src/app/modules/salaries/components/historical-charts-page/historical-survey-chart/historical-survey-chart.component.html
+++ b/src/app/modules/salaries/components/historical-charts-page/historical-survey-chart/historical-survey-chart.component.html
@@ -1,10 +1,11 @@
 <div class="mb-5">
   <div class="h4 mb-2">Польза статистики, все ответы вместе</div>
   <div class="mb-2">
-    График показывает соотношение ответов на вопрос "Полезна ли статистика по зарплатам?".
-    Вариантов было три: "Да", "Нет", "Не уверен". На графике ответы построены в столбик, 
-    высотка столбика - 100%. Первый столбик - ответы респондентов, работающих в Казахстанских 
-    компаниях, второй - ответы респондентов, работающих на удаленке.
+    График показывает соотношение ответов на вопрос "Полезна ли статистика по
+    зарплатам?". Вариантов было три: "Да", "Нет", "Не уверен". На графике ответы
+    построены в столбик, высотка столбика - 100%. Первый столбик - ответы
+    респондентов, работающих в Казахстанских компаниях, второй - ответы
+    респондентов, работающих на удаленке.
   </div>
   <div class="chart-container">
     <canvas class="chart" id="usefulness-chart">{{ usefulnessChart }}</canvas>
@@ -14,9 +15,10 @@
 <div class="mb-5">
   <div class="h4 mb-3">Ожидания от статистики, все ответы вместе</div>
   <div class="mb-2">
-    График показывает соотношение ответов на вопрос "Насколько ожидаемой оказалась статистика?".
-    Вариантов было три: "Выше ожиданий", "Ожидаемая", "Ниже ожиданий". На графике ответы построены в столбик, 
-    высотка столбика - 100%. Первый столбик - ответы респондентов, работающих в Казахстанских 
+    График показывает соотношение ответов на вопрос "Насколько ожидаемой
+    оказалась статистика?". Вариантов было три: "Выше ожиданий", "Ожидаемая",
+    "Ниже ожиданий". На графике ответы построены в столбик, высотка столбика -
+    100%. Первый столбик - ответы респондентов, работающих в Казахстанских
     компаниях, второй - ответы респондентов, работающих на удаленке.
   </div>
   <div class="chart-container">
@@ -24,9 +26,7 @@
   </div>
 </div>
 
-<div class="mb-5 h1">
-  Распределение ответов по грейдам
-</div>
+<div class="mb-5 h1">Распределение ответов по грейдам</div>
 
 <div class="mb-2">
   <div class="mb-1">
@@ -45,53 +45,71 @@
 </div>
 
 <div class="mb-5">
-  <div class="h4 mb-2">Польза статистики по мнению тех, кто работает на Казахстан</div>
+  <div class="h4 mb-2">
+    Польза статистики по мнению тех, кто работает на Казахстан
+  </div>
   <div class="mb-2">
-    График показывает соотношение ответов на вопрос "Полезна ли статистика по зарплатам?".
-    Вариантов было три: "Да", "Нет", "Не уверен". На графике ответы построены в столбик, 
-    высотка столбика - 100%. Каждый столбик - ответы респондентов одного грейда: 
-    Junior, Middle, Senior, Lead.
+    График показывает соотношение ответов на вопрос "Полезна ли статистика по
+    зарплатам?". Вариантов было три: "Да", "Нет", "Не уверен". На графике ответы
+    построены в столбик, высотка столбика - 100%. Каждый столбик - ответы
+    респондентов одного грейда: Junior, Middle, Senior, Lead.
   </div>
   <div class="chart-container">
-    <canvas class="chart" id="usefulness-grade-local-chart">{{ usefulnessGradeLocalChart }}</canvas>
+    <canvas class="chart" id="usefulness-grade-local-chart">{{
+      usefulnessGradeLocalChart
+    }}</canvas>
   </div>
 </div>
 
 <div class="mb-5">
-  <div class="h4 mb-2">Польза статистики по мнению тех, кто работает на удаленке</div>
+  <div class="h4 mb-2">
+    Польза статистики по мнению тех, кто работает на удаленке
+  </div>
   <div class="mb-2">
-    График показывает соотношение ответов на вопрос "Полезна ли статистика по зарплатам?".
-    Вариантов было три: "Да", "Нет", "Не уверен". На графике ответы построены в столбик, 
-    высотка столбика - 100%. Каждый столбик - ответы респондентов одного грейда: 
-    Junior, Middle, Senior, Lead.
+    График показывает соотношение ответов на вопрос "Полезна ли статистика по
+    зарплатам?". Вариантов было три: "Да", "Нет", "Не уверен". На графике ответы
+    построены в столбик, высотка столбика - 100%. Каждый столбик - ответы
+    респондентов одного грейда: Junior, Middle, Senior, Lead.
   </div>
   <div class="chart-container">
-    <canvas class="chart" id="usefulness-grade-remote-chart">{{ usefulnessGradeRemoteChart }}</canvas>
+    <canvas class="chart" id="usefulness-grade-remote-chart">{{
+      usefulnessGradeRemoteChart
+    }}</canvas>
   </div>
 </div>
 
 <div class="mb-5">
-  <div class="h4 mb-2">Ожидания по статистике у тех, кто работает на Казахстан</div>
+  <div class="h4 mb-2">
+    Ожидания по статистике у тех, кто работает на Казахстан
+  </div>
   <div class="mb-2">
-    График показывает соотношение ответов на вопрос "Насколько ожидаемой оказалась статистика?".
-    Вариантов было три: "Выше ожиданий", "Ожидаемая", "Ниже ожиданий". На графике ответы построены в столбик, 
-    высотка столбика - 100%. Каждый столбик - ответы респондентов одного грейда: 
-    Junior, Middle, Senior, Lead.
+    График показывает соотношение ответов на вопрос "Насколько ожидаемой
+    оказалась статистика?". Вариантов было три: "Выше ожиданий", "Ожидаемая",
+    "Ниже ожиданий". На графике ответы построены в столбик, высотка столбика -
+    100%. Каждый столбик - ответы респондентов одного грейда: Junior, Middle,
+    Senior, Lead.
   </div>
   <div class="chart-container">
-    <canvas class="chart" id="expectation-grade-local-chart">{{ expectationGradeLocalChart }}</canvas>
+    <canvas class="chart" id="expectation-grade-local-chart">{{
+      expectationGradeLocalChart
+    }}</canvas>
   </div>
 </div>
 
 <div class="mb-5">
-  <div class="h4 mb-2">Ожидания по статистике у тех, кто работает на удаленке</div>
+  <div class="h4 mb-2">
+    Ожидания по статистике у тех, кто работает на удаленке
+  </div>
   <div class="mb-2">
-    График показывает соотношение ответов на вопрос "Насколько ожидаемой оказалась статистика?".
-    Вариантов было три: "Выше ожиданий", "Ожидаемая", "Ниже ожиданий". На графике ответы построены в столбик, 
-    высотка столбика - 100%. Каждый столбик - ответы респондентов одного грейда: 
-    Junior, Middle, Senior, Lead.
+    График показывает соотношение ответов на вопрос "Насколько ожидаемой
+    оказалась статистика?". Вариантов было три: "Выше ожиданий", "Ожидаемая",
+    "Ниже ожиданий". На графике ответы построены в столбик, высотка столбика -
+    100%. Каждый столбик - ответы респондентов одного грейда: Junior, Middle,
+    Senior, Lead.
   </div>
   <div class="chart-container">
-    <canvas class="chart" id="expectation-grade-remote-chart">{{ expectationGradeRemoteChart }}</canvas>
+    <canvas class="chart" id="expectation-grade-remote-chart">{{
+      expectationGradeRemoteChart
+    }}</canvas>
   </div>
 </div>
