--- a/src/app/modules/salaries/components/historical-charts-page/historical-charts-page.component.html
+++ b/src/app/modules/salaries/components/historical-charts-page/historical-charts-page.component.html
@@ -50,6 +50,21 @@
 <div class="container mt-5" *ngIf="surveyData; else dataLoading">
   <div class="card card-body">
     <div class="mb-5 h1">Обратная связь по статистике</div>
+
+    <div class="mb-5" *ngIf="!surveyData.hasRecentSurveyReply">
+      <div class="mb-1">
+        Нам важно мнение пользователей о предоставленной статистике. Интересно
+        взглянуть на то, как респонденты оценивают свою зарплату и какие
+        ожидания у них относительно рынка труда в Казахстане.
+      </div>
+      <div class="mb-5">Пожалуйста, примите участие в опросе.</div>
+      <div class="ps-1 pe-1">
+        <app-salaries-survey-block
+          (closeButtonClick)="closeSurveyBlock()"
+        ></app-salaries-survey-block>
+      </div>
+    </div>
+
     <div class="">
       <app-historical-survey-chart [data]="surveyData" />
     </div>
@@ -72,7 +87,7 @@
       </div>
       <div>
         <a routerLink="/salaries" class="btn btn-link">
-          Перейти к форм анкеты
+          Перейти к форме анкеты
         </a>
       </div>
     </div>
