--- a/src/app/modules/home/components/about-us/about-us.component.html
+++ b/src/app/modules/home/components/about-us/about-us.component.html
@@ -65,7 +65,7 @@
           а также был внешним интервьюером в другой компании. Минимум раз в
           неделю общался с кандидатами и по каждому собеседованию нужно было
           оформлять фидбек по шаблонам и отдавать рекрутеру. Мне захотелось
-          автоматизировать процесс, и так и родился сервис Tech.Interview. Я
+          автоматизировать процесс, и так и родился сервис Techinterview.space. Я
           разработал его в первую очередь для себя, но в профессиональных чатах
           поделился ссылкой и предложил использовать всем желающим. К сожалению,
           особой популярности у платформы не было. Через какое-то время я и сам
