Added props to form

--- a/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
@@ -205,6 +205,7 @@
           <app-salary-chart-global-filters
             [filterData]="filterData"
             [professions]="professions"
+            [skills]="skills"
             (filtersApplied)="applyGlobalFilters($event)"
             (filtersReset)="resetGlobalFilters()"
             (shareClicked)="share($event)"
