--- a/src/app/modules/salaries/components/salaries-chart/salary-chart-global-filters/salary-chart-global-filters.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salary-chart-global-filters/salary-chart-global-filters.component.html
@@ -48,23 +48,37 @@
         >
         </ng-select>
       </div>
-
+      <div class="col-md-3 mb-1">
+        <label class="text-sm">Навыки</label>
+        <ng-select
+          [items]="skillsAsOptions"
+          [hideSelected]="true"
+          [selectOnTab]="true"
+          bindLabel="label"
+          bindValue="item"
+          placeholder="Выберите навыки"
+          appendTo="body"
+          formControlName="skills"
+          [multiple]="true"
+        >
+        </ng-select>
+      </div>
+    </div>
+    <div class="row">
       <div class="col-md-4 mb-1 d-flex align-items-end">
-        <div>
-          <button type="submit" class="btn btn-outline-dark">Применить</button>
-          <button
-            type="reset"
-            class="btn btn-outline-secondary ms-2 me-2"
-            (click)="reset()"
-          >
-            Сброс
-          </button>
-          <app-share-button
-            [title]="'Поделиться'"
-            [cssBtnSize]="''"
-            (shareClicked)="share()"
-          ></app-share-button>
-        </div>
+        <button type="submit" class="btn btn-outline-dark">Применить</button>
+        <button
+          type="reset"
+          class="btn btn-outline-secondary ms-2 me-2"
+          (click)="reset()"
+        >
+          Сброс
+        </button>
+        <app-share-button
+          [title]="'Поделиться'"
+          [cssBtnSize]="'small'"
+          (shareClicked)="share()"
+        ></app-share-button>
       </div>
     </div>
   </form>
