--- a/src/app/modules/admin/components/salaries/salaries-admin-paginated-table/salaries-admin-paginated-table.component.html
+++ b/src/app/modules/admin/components/salaries/salaries-admin-paginated-table/salaries-admin-paginated-table.component.html
@@ -114,7 +114,7 @@
         <td>{{ item.city }}</td>
         <td>{{ item.skill }}</td>
         <td>{{ item.industry }}</td>
-        <td>{{ item.salarySourceType }}</td>
+        <td>{{ item.sourceType }}</td>
         <td>{{ item.updatedAt | date : "yyyy-MM-dd HH:mm" }}</td>
         <td>
           <button
