--- a/src/app/modules/salaries/components/salaries-chart/salary-chart-global-filters/salary-chart-global-filters.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salary-chart-global-filters/salary-chart-global-filters.component.html
@@ -65,6 +65,16 @@
       </div>
     </div>
     <div class="row">
+      <div class="col-md-2 mb-1">
+        <label class="text-sm">Источник данных</label>
+        <select class="form-select" formControlName="salarySourceType">
+          <option [value]="null" selected>Собственная статистика</option>
+          <option *ngFor="let item of form.sourceTypes" [value]="item.item">
+            {{ item.label }}
+          </option>
+        </select>
+      </div>
+
       <div class="col-md-4 mb-1 d-flex align-items-end">
         <button type="submit" class="btn btn-outline-dark">Применить</button>
         <button
