Added block for kolesa

--- a/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
@@ -211,6 +211,19 @@
             (shareClicked)="share($event)"
           >
           </app-salary-chart-global-filters>
+
+          <div class="mt-3 alert alert-info" *ngIf="kolesaImportedSalariesWasSelected">
+            <div class="h5">Внимание!</div>
+            <div class="mt-2">
+              Вы просматриваете импортированную статистику <a href="https://zerttey.kolesa.group/developers-2022?utm=techinterview.space" target="_blank" class="text-reset">исследования зарплат работников в IT</a> от 2022 года, проведенного компанией
+              <a href="https://kolesa.group?utm=techinterview.space" target="_blank" class="text-reset">Kolesa Group</a>. 
+              Статистика была собрана в ноябре-декабре 2021 года и включает в себя данные о зарплатах, специализациях и опыте работы. 
+              Список валют показывает те рейты, которые были актуальны на декабрь 2021 года по данным нацбанка РК.
+            </div>
+            <div class="mt-2">
+              Спасибо команде Kolesa Group за предоставленные данные.
+            </div>
+          </div>
         </div>
 
         <div class="mb-5 display-4 chapter-title">
