Added link to page with tg bot info

--- a/src/app/modules/home/components/home/home.component.scss
+++ b/src/app/modules/home/components/home/home.component.scss
@@ -4,6 +4,7 @@
 
 .display-1 {
   font-weight: 400;
+  letter-spacing: 0.02em;
 }
 
 .feature-title {
@@ -51,5 +52,5 @@
 }
 
 .bg-light-blue {
-  background-color: #AAE4FA;
+  background-color: #aae4fa;
 }
