Added wednesday frog

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
     <div id="body-container">
       <router-outlet></router-outlet>
       <app-alert></app-alert>
+      <app-wednesday-frog></app-wednesday-frog>
     </div>
   </main>
   <ngx-spinner
