--- a/src/app/modules/salaries/components/salaries-chart/salary-block-value/salary-block-value.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salary-block-value/salary-block-value.component.html
@@ -1,33 +1,48 @@
-<div>
-  <div class="">
-    <div class="text-muted">Медианная зарплата в местных компаниях</div>
-    <div>
-      <span class="display-1 me-2">{{ median }}</span>
-      <span class="h4 text-muted">{{ currentCurrencyLabel }}</span>
+<div class="row">
+  <div class="col-md-9 mb-2">
+    <div class="">
+      <div class="text-muted">Медианная зарплата в местных компаниях</div>
+      <div>
+        <span class="display-1 me-2">{{ median }}</span>
+        <span class="h4 text-muted">{{ currentCurrencyLabel }}</span>
+      </div>
+    </div>
+
+    <div class="mt-2">
+      <div class="text-muted">Средняя зарплата</div>
+      <div class="">
+        <span class="h3 me-2">{{ average }}</span>
+        <span class="h5 text-muted">{{ currentCurrencyLabel }}</span>
+      </div>
+    </div>
+
+    <div class="mt-2">
+      <div class="text-muted">Медианная на удаленке</div>
+      <div class="">
+        <span class="h3 me-2">{{ medianRemote }}</span>
+        <span class="h5 text-muted">{{ currentCurrencyLabel }}</span>
+      </div>
+    </div>
+
+    <div class="mt-2">
+      <div class="text-muted">Средняя на удаленке</div>
+      <div class="">
+        <span class="h3 me-2">{{ averageRemote }}</span>
+        <span class="h5 text-muted">{{ currentCurrencyLabel }}</span>
+      </div>
+    </div>
+
+    <div class="text-muted mt-3 fst-italic">
+      <span>* Рассчитано на основе {{ source?.countOfRecords }} анкет(ы)</span>
     </div>
   </div>
 
-  <div class="mt-2">
-    <div class="text-muted">Средняя зарплата</div>
-    <div class="">
-      <span class="h3 me-2">{{ average }}</span>
-      <span class="h5 text-muted">{{ currentCurrencyLabel }}</span>
-    </div>
-  </div>
-
-  <div class="mt-2">
-    <div class="text-muted">Медианная на удаленке</div>
-    <div class="">
-      <span class="h3 me-2">{{ medianRemote }}</span>
-      <span class="h5 text-muted">{{ currentCurrencyLabel }}</span>
-    </div>
-  </div>
-
-  <div class="mt-2">
-    <div class="text-muted">Средняя на удаленке</div>
-    <div class="">
-      <span class="h3 me-2">{{ averageRemote }}</span>
-      <span class="h5 text-muted">{{ currentCurrencyLabel }}</span>
-    </div>
+  <div class="col-md-3 mb-2">
+    <img
+      src="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/logo_cat_only.png"
+      class="img-fluid"
+      alt="logo"
+      title="Кот Магеллан, который любит считать деньги"
+    />
   </div>
 </div>
