--- a/src/app/shared/components/data-loading-info-block/data-loading-info-block.component.html
+++ b/src/app/shared/components/data-loading-info-block/data-loading-info-block.component.html
@@ -3,8 +3,12 @@
     <div class="text-center">
       <app-loading-spinner></app-loading-spinner>
     </div>
-    <div class="text-center">
+    <div *ngIf="title" class="text-center mb-3">
       <span>{{ title }}</span>
+    </div>
+
+    <div class="">
+      <ng-content></ng-content>
     </div>
   </div>
 </div>
