--- a/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
@@ -213,14 +213,14 @@
             <div class="mt-2">
               Вы просматриваете импортированную статистику
               <a
-                href="https://zerttey.kolesa.group/developers-2022?utm=techinterview.space"
+                href="https://zerttey.kolesa.group/developers-2022?utm_source=techinterview.space"
                 target="_blank"
                 class="text-reset"
                 >исследования зарплат работников в IT</a
               >
               от 2022 года, проведенного компанией
               <a
-                href="https://kolesa.group?utm=techinterview.space"
+                href="https://kolesa.group?utm_source=techinterview.space"
                 target="_blank"
                 class="text-reset"
                 >Kolesa Group</a
