Added filter changes

--- a/src/app/modules/salaries/components/historical-charts-page/historical-charts-page.component.html
+++ b/src/app/modules/salaries/components/historical-charts-page/historical-charts-page.component.html
@@ -19,7 +19,9 @@
       <div class="mb-5">
         <app-salary-chart-global-filters
           [filterData]="filterData"
+          [showSalariesSource]="false"
           [professions]="professions"
+          [skills]="skills"
           (filtersApplied)="applyGlobalFilters($event)"
           (filtersReset)="resetGlobalFilters()"
           (shareClicked)="share($event)"
