--- a/src/app/modules/salaries/components/salaries-chart/salary-chart-global-filters/salary-chart-global-filters.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salary-chart-global-filters/salary-chart-global-filters.component.html
@@ -66,7 +66,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-3 mb-1">
+        <div class="col-md-3 mb-1" *ngIf="showSalariesSource">
           <label class="text-sm">Источник данных</label>
           <select class="form-select" formControlName="salarySourceType">
             <option [value]="null" selected>Собственная статистика</option>
