--- a/src/app/modules/salaries/components/salaries-survey-page/salaries-survey-page.component.html
+++ b/src/app/modules/salaries/components/salaries-survey-page/salaries-survey-page.component.html
@@ -2,7 +2,7 @@
 
 <div class="container mt-5 mb-5" *ngIf="userData; else dataLoading">
   <div class="card">
-    <div class="card-body">
+    <div class="card-body p-5">
       <div class="" *ngIf="userData.hasRecentSurveyReply && data != null">
         <div class="">
           <div class="mb-5">
